<resources>
    <string name="app_name">RSETI</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login_id">Enter User id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_your_account">Please sign in to your account</string>
    <string name="userId">User ID</string>
    <string name="form_name">Form Name</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="institute_name">Institute Name</string>
    <string name="date">Date<font color='#FF0000'>*</font></string>
    <string name="select_date">Select Date</string>
    <string name="total_participants">Total Participants<font color='#FF0000'>*</font></string>
    <string name="select_total_participants">Enter Total Participants</string>
    <string name="participating_official">Participating Official</string>
    <string name="designation">Designation</string>
    <string name="name_of_org">Enter Name of the organisation</string>
    <string name="name_of_organization">Name of the organisation /NGOs/Banks Participated <font color='#FF0000'>*</font></string>
    <string name="program_name">Program Name<font color='#FF0000'>*</font></string>
    <string name="select_program_name">Select Program Name</string>
    <string name="state">State <font color='#FF0000'>*</font></string>
    <string name="select_state">Select State</string>
    <string name="district">District <font color='#FF0000'>*</font></string>
    <string name="select_district">Select District</string>
    <string name="Block">Block <font color='#FF0000'>*</font></string>
    <string name="select_Block">Select Block</string>
    <string name="Gp">Gp <font color='#FF0000'>*</font></string>
    <string name="select_gp">Select GP</string>
    <string name="Village">Village <font color='#FF0000'>*</font></string>
    <string name="select_Village">Select Village</string>
    <string name="no_of_application_expected">No.of applications generated through Kaushal panjee <font color='#FF0000'>*</font></string>
    <string name="enter_no_of_application_expected">No.of applications generated through Kaushal panjee</string>
    <string name="brief_description">Brief description of the Programme <font color='#FF0000'>*</font></string>
    <string name="enter_brief_description">Brief description of the Programme</string>
    <string name="capture_image">Capture Image<font color='#FF0000'>*</font></string>
    <string name="submit">Submit Details</string>
    <string name="add_candidate">Add Candidate</string>
    <string name="location">Location :-  </string>
    <string name="location_not_found">Location not found</string>
    <string name="address_not_found">Address not found</string>
    <string name="address">Address :-  </string>
    <string name="error_address">Error getting address</string>
    <string name="send_again">Send again</string>
    <string name="verify">Verify</string>
    <string name="not_receive_code">Did\\\'t receive a code!</string>
    <string name="enter_code_msg">Please enter 4 digit OTP sent to your phone number</string>
    <string name="enter_code_email_msg">Please enter 4 digit OTP sent to your email address</string>
    <string name="enter_code">Enter OTP</string>
    <string name="email">Enter Email</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="forgot_id_and_password">Forgot id and password</string>
    <string name="enter_id">Enter User Id</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="candidate_name_up">Candidate Name<font color='#FF0000'>*</font></string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_man">Mobile Number<font color='#FF0000'>*</font></string>
    <string name="guardian_name">Father/Husband/Guardian Name<font color='#FF0000'>*</font></string>
    <string name="guardian_name1">Father/Husband/Guardian Name</string>
    <string name="guardian_Mobile">Father/Husband/Guardian Mobile Number</string>
    <string name="guardian_Mobile_man">Father/Husband/Guardian Mobile Number<font color='#FF0000'>*</font></string>
    <string name="gender">Gender</string>
    <string name="gender_man">Gender<font color='#FF0000'>*</font></string>
    <string name="dob">Date Of Birth</string>
    <string name="dob_man">Date Of Birth<font color='#FF0000'>*</font></string>
    <string name="full_address">Full Address</string>
    <string name="full_address_man">Full Address<font color='#FF0000'>*</font></string>
    <string name="eap_id">Eap Id</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="search_candidate_via_kaushal_panjee">Search candidate via kaushal panjee ID</string>
    <string name="enter_kaushal_panjee_id">Enter kaushal panjee ID</string>
    <string name="eapName">Eap List</string>
    <string name="added_candidates">Added Candidates</string>
    <string name="are_you_sure_you_want_to_delete_this_candidate">Are you sure you want to delete this candidate?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_candidate">Delete Candidate?</string>
    <string name="submit_details">Submit Details</string>
    <string name="statush">Status</string>
    <string name="selectForInvestment">Select For Investment Type</string>
    <string name="SelfInvestment">Self Investment</string>
    <string name="credit_linkage_bank_actuals">(Credit Linkage) Bank (Actuals)</string>
    <string name="Total">Total</string>
    <string name="bank_name">Bank name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="ifsc_code_mandate">IFSC Code<font color='red'>*</font></string>
    <string name="enter_ifsc_code">Enter Ifsc Code</string>
    <string name="branch_name">branch name</string>
    <string name="bank_account_number">Loan account number</string>
    <string name="city">City</string>
    <string name="Reason">Reason</string>
    <string name="Reason_mandate">Reason<font color='red'>*</font></string>
    <string name="account_status">Account Status</string>
    <string name="account_status_mandate">Account status<font color='red'>*</font></string>
    <string name="batchList">Batches</string>
    <string name="batch_name">Batch Name</string>
    <string name="batch_id">Batch Reg No</string>
    <string name="candidate_attendance">Candidate List</string>
    <string name="contact_number">Contact Number</string>
    <string name="roll_no">Roll No.</string>
    <string name="name">Name</string>
    <string name="candidate_follow_up">Candidate Follow Up</string>
    <string name="care_of">Care Of</string>
    <string name="follow_type">Follow Type</string>
    <string name="select_follow_type">Select follow type</string>
    <string name="date_nm">Date</string>
    <string name="status">Status</string>
    <string name="select_status">Select status</string>
    <string name="reason">Reason<font color='#FF0000'>*</font></string>
    <string name="reason_nm">Reason</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="follow_up_done_by">Follow up done by</string>
    <string name="select_year">Select Year</string>
    <string name="select_month">Select Month</string>
    <string name="settlement_status">Settlement Status</string>
    <string name="follow_up_status">Follow Up status</string>
    <string name="status_quarter_1">S1</string>
    <string name="status_quarter_2">S2</string>
    <string name="status_quarter_3">S3</string>
    <string name="status_quarter_4">S4</string>
    <string name="status_quarter_5">S5</string>
    <string name="status_quarter_6">S6</string>
    <string name="status_quarter_7">S7</string>
    <string name="status_quarter_8">S8</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="kyc_failed_msg">Kyc failed</string>
    <string name="something_went_wrong_at_uidai_site">Something went wrong at UIDAI side.</string>
    <string name="ok">Ok</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="name1">Name:</string>
    <string name="careof">CareOf:</string>
    <string name="attendance_marked">Attendance Marked</string>
    <string name="as_per_aadhaar">Aadhaar Address</string>
    <string name="view_profile">View Attendance</string>
    <string name="earnings_Income">Earnings income</string>
    <string name="earnings_income_hint">earnings income</string>
    <string name="earnings_income_mandate">Earnings Income<font color='red'>*</font></string>
    <string name="employment_given_to_others">employment given to others</string>
    <string name="enter_number">enter number</string>
    <string name="family_member_part_time">family member part time</string>
    <string name="family_member_part_time_hint">family_member_part_time</string>
    <string name="upload_passbook_scan">Passbook copy</string>
    <string name="settlement_proof">Settlement Proof</string>
    <string name="settlement_photo_mandate">Settlement Photo<font color='red'>*</font></string>
    <string name="employment_given_to_others_desc">employment given to others</string>
    <string name="appointment_letter">Appointment letter</string>
    <string name="enter_loan_account_number">Enter Loan Account Number</string>
    <string name="enter_loan_account_number_mandate">Enter Loan Account Number<font color='red'>*</font></string>
    <string name="Enter_City_Name">Enter City Name</string>
    <string name="city_mandate">City <font color='red'>*</font></string>
    <string name="Employment_given_to_others">Employment given to others</string>
    <string name="family_member_part_time_job">Family member part time Job</string>
    <string name="enter_number_of_employment_given_to_others">Enter the number of emplyment given to others</string>
    <string name="Employment_given_to_others_mandate">Employment given to others <font color='red'>*</font></string>
    <string name="family_member_part_time_job_mandate">Family member part-time Job <font color='red'>*</font></string>
    <string name="bank_account_number_mandate">Bank_account_number_mandate*</string>
    <string name="status_mandate">Status*</string>
    <string name="settlement_proof_mandate">Settlement proof*</string>
    <string name="search">Search</string>
    <string name="settlement_photos">Settlement photo</string>
    <string name="mark_today_attention">Mark today Attendance</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="total_hours">Total Hours</string>
    <string name="_00_00_am">00:00 AM</string>
    <string name="attendance_mode">Attendance Mode<font color='#FF0000'>*</font></string>
    <string name="select_attendance_mode">Select Attendance Mode</string>
    <string name="select_branch_name">Select Branch Name</string>
    <string name="name_of_the_state_director_for_rseti">Name of the State Director for RSETI</string>
    <string name="name_of_the_rseti_visited">Name of the RSETI visited</string>
    <string name="financial_year">Financial Year</string>
    <string name="whether_overall_cleanliness_is_maintained_at_the_institute">Whether overall cleanliness is maintained at the Institute:</string>
    <string name="select_cleanliness_condition">Select Cleanliness Condition</string>
    <string name="candidate_id">Candidate Id</string>
    <string name="guardian_ph_no">Guardian Ph No</string>
    <string name="settled_on">Settled On</string>
    <string name="verification_status">Verification Status</string>
</resources>