<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_20">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:padding="@dimen/dp_4"
            android:text="@string/candidate_name_up"
            android:textColor="@color/color_dark_green" />
        <EditText
            android:id="@+id/etCandidateName"
            style="@style/EditText"
            android:autofillHints=""
            android:hint="@string/candidate_name"
            android:imeOptions="actionNext"
            android:drawableEnd="@drawable/baseline_person_24"
            android:inputType="number"
            android:maxLength="5"
            android:paddingHorizontal="@dimen/dp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:padding="@dimen/dp_4"
            android:text="@string/mobile_number_man"
            android:textColor="@color/color_dark_green" />
        <EditText
            android:id="@+id/etMobileNo"
            style="@style/EditText"
            android:hint="@string/mobile_number"
            android:imeOptions="actionNext"
            android:drawableEnd="@drawable/baseline_phone_enabled_24"
            android:inputType="number"
            android:maxLength="5"
            android:paddingHorizontal="@dimen/dp_20" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:padding="@dimen/dp_4"
            android:text="@string/dob_man"
            android:textColor="@color/color_dark_green" />
        <EditText
            android:id="@+id/etDob"
            style="@style/EditText"
            android:hint="@string/dob"
            android:imeOptions="actionNext"
            android:drawableEnd="@drawable/dobb"
            android:inputType="number"
            android:maxLength="5"
            android:paddingHorizontal="@dimen/dp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:padding="@dimen/dp_4"
            android:text="@string/gender_man"
            android:textColor="@color/color_dark_green" />
        <EditText
            android:id="@+id/etGender"
            style="@style/EditText"
            android:hint="@string/gender"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="5"
            android:paddingHorizontal="@dimen/dp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:padding="@dimen/dp_4"
            android:text="@string/guardian_name"
            android:textColor="@color/color_dark_green" />
        <EditText
            android:id="@+id/etGuardianName"
            style="@style/EditText"
            android:hint="@string/guardian_name1"
            android:imeOptions="actionNext"
            android:drawableEnd="@drawable/baseline_person_24"
            android:inputType="number"
            android:maxLength="5"
            android:paddingHorizontal="@dimen/dp_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:padding="@dimen/dp_4"
            android:text="@string/guardian_Mobile_man"
            android:textColor="@color/color_dark_green" />
        <EditText
            android:id="@+id/etGuardianMobile"
            style="@style/EditText"
            android:hint="@string/guardian_Mobile"
            android:imeOptions="actionNext"
            android:drawableEnd="@drawable/baseline_phone_enabled_24"
            android:inputType="number"
            android:maxLength="5"
            android:paddingHorizontal="@dimen/dp_20" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:padding="@dimen/dp_4"
            android:text="@string/full_address_man"
            android:textColor="@color/color_dark_green" />
        <EditText
            android:id="@+id/etAddress"
            style="@style/EditText"
            android:hint="@string/full_address"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="5"
            android:paddingHorizontal="@dimen/dp_20" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>