<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_10"
    android:background="@drawable/card_backgroundn"
    android:elevation="8dp">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:background="@drawable/top"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="@dimen/dp_100"
            android:layout_gravity="center"
            android:src="@drawable/baseline_delete_24"/>
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_candidate"
        android:fontFamily="@font/avenir_next_demi_bold"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_this_candidate"
        android:textSize="16sp"
        android:gravity="center"
        android:fontFamily="@font/sf_pro_rounded_semibold"
        android:paddingTop="10dp"
        android:textColor="#676A6B" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/color_dark_green"
            android:backgroundTint="@color/color_grey"
            android:paddingHorizontal="20dp"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:backgroundTint="#CE0A28"
            android:paddingHorizontal="20dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>



</LinearLayout>


</FrameLayout>
