<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp_20"
    android:layout_marginTop="@dimen/dp_10"
    android:background="@drawable/card_follow_up_background"
    android:elevation="@dimen/dp_1"
    android:padding="@dimen/dp_10">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/candidateImage"
        android:layout_width="@dimen/dp_55"
        android:layout_height="@dimen/dp_55"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CustomCircleShape"
        app:strokeColor="@color/color_dark_green"
        app:strokeWidth="@dimen/dp_1" />


    <TextView
        android:id="@+id/tvBatchRegno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/batch_id"
        android:textColor="@color/color_follow_up_title"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/candidateImage"
        app:layout_constraintTop_toTopOf="@+id/candidateImage" />

    <TextView
        android:id="@+id/tvtvBatchRegNoValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:fontFamily="@font/avenir_next_bold"
        android:text="@string/batch_id"
        android:textColor="@color/color_text"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@+id/tvBatchRegno"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tvRollNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/roll_no"
        android:textColor="@color/color_follow_up_title"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/candidateImage"
        app:layout_constraintTop_toBottomOf="@+id/tvtvBatchRegNoValue" />


    <TextView
        android:id="@+id/tvRollNumberValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:fontFamily="@font/avenir_next_bold"
        android:text="@string/roll_no"
        android:textColor="@color/color_text"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@+id/tvRollNumber"
        app:layout_constraintTop_toBottomOf="@+id/tvtvBatchRegNoValue" />




    <TextView
        android:id="@+id/tvCandidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/name"
        android:textColor="@color/color_follow_up_title"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/candidateImage"
        app:layout_constraintTop_toBottomOf="@+id/tvRollNumberValue" />

    <TextView
            android:id="@+id/tvCandidateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:fontFamily="@font/avenir_next_bold"
        android:text="@string/candidate_name"
        android:textColor="@color/color_text"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@+id/tvRollNumber"
        app:layout_constraintTop_toBottomOf="@+id/tvRollNumberValue"
        />





    <TextView
        android:id="@+id/tvCandidateId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/candidate_id"
        android:textColor="@color/color_follow_up_title"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/candidateImage"
        app:layout_constraintTop_toBottomOf="@+id/tvCandidateName" />

    <TextView
        android:id="@+id/tvCandidateIdValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:fontFamily="@font/avenir_next_bold"
        android:text="@string/candidate_id"
        android:textColor="@color/color_text"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@+id/tvCandidateId"
        app:layout_constraintTop_toBottomOf="@+id/tvCandidateName"
        />

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/contact_number"
        android:textColor="@color/color_follow_up_title"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/candidateImage"
        app:layout_constraintTop_toBottomOf="@+id/tvCandidateIdValue" />
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toBottomOf="@+id/candidateImage"-->

    <TextView
        android:id="@+id/tvContactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"

        android:fontFamily="@font/avenir_next_bold"
        android:text="@string/contact_number"
        android:textColor="@color/color_text"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/tvContact"
        app:layout_constraintTop_toBottomOf="@+id/tvCandidateIdValue" />


    <TextView
        android:id="@+id/tvguardianContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/guardian_ph_no"
        android:textColor="@color/color_follow_up_title"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/candidateImage"
        app:layout_constraintTop_toBottomOf="@+id/tvContactNumber" />

    <TextView
        android:id="@+id/tvguardianContactValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"

        android:fontFamily="@font/avenir_next_bold"
        android:text="@string/guardian_ph_no"
        android:textColor="@color/color_text"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/tvguardianContact"
        app:layout_constraintTop_toBottomOf="@+id/tvContactNumber" />

    <TextView
        android:id="@+id/tvsettledOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/settled_on"
        android:textColor="@color/color_follow_up_title"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/candidateImage"
        app:layout_constraintTop_toBottomOf="@+id/tvguardianContactValue" />

    <TextView
        android:id="@+id/tvsettledOnValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"

        android:fontFamily="@font/avenir_next_bold"
        android:text="@string/settled_on"
        android:textColor="@color/color_text"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/tvsettledOn"
        app:layout_constraintTop_toBottomOf="@+id/tvguardianContactValue" />

    <TextView
        android:id="@+id/tvverificationStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/verification_status"
        android:textColor="@color/color_follow_up_title"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/candidateImage"
        app:layout_constraintTop_toBottomOf="@+id/tvsettledOnValue" />

    <TextView
        android:id="@+id/tvverificationStatusValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"

        android:fontFamily="@font/avenir_next_bold"
        android:text="@string/verification_status"
        android:textColor="@color/color_text"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/tvverificationStatus"
        app:layout_constraintTop_toBottomOf="@+id/tvsettledOnValue" />

</androidx.constraintlayout.widget.ConstraintLayout>